--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,5 @@
 Options -Indexes
+
 RewriteEngine on 
 RewriteCond $1 !^(index\.php|images|css|javascript|rte|captcha|robots\.txt) 
 RewriteCond %{REQUEST_FILENAME} !-f 
@@ -8,3 +9,7 @@ RewriteRule ^(.*)$ index.php?$1 [L,QSA]
 RewriteEngine on
 RewriteCond %{HTTP_HOST} ^morecerto.com.br [NC]
 RewriteRule ^(.*)$ http://www.morecerto.com.br/$1 [L,R=301]
+
+RewriteEngine On
+RewriteCond %{HTTPS} on
+RewriteRule (.*) http://%{HTTP_HOST}%{REQUEST_URI}
